# tizd_lab1

./: .clang-format  CMakeLists.txt  README.md  app.out  debug.sh  eba.sh  errrrrrrrrrrrrr  log.txt  main.cpp  therr
.cache/clangd/index/: List.cpp.33D72866BB52D8AA.idx  List.h.7BB417DFE1BA3E86.idx  ListItem.cpp.0921C48183E11C7F.idx  ListItem.h.83AB62FA3052744A.idx  Log.cpp.CD94BE642A92181D.idx  Log.h.861D76CEEC0C1E15.idx  Menu.cpp.B244E678CC172181.idx  Menu.h.26EA159CC7B44A03.idx  MenuItem.cpp.9804DA0C270082C2.idx  MenuItem.h.B517F014DC19392A.idx  MenuItemFactory.cpp.78322323684F520B.idx  MenuItemFactory.h.EDE28FA9A48B49CF.idx  main.cpp.8514558831E265DA.idx
Core/Inc/List/: List.h  ListItem.h
Core/Inc/Log/: Log.h
Core/Inc/Menu/: Menu.h  MenuItem.h  MenuItemFactory.h
Core/Src/List/: List.cpp  ListItem.cpp
Core/Src/Log/: Log.cpp
Core/Src/Menu/: Menu.cpp  MenuItem.cpp  MenuItemFactory.cpp
